# C_Practice

./: .gitignore.txt  CMakeLists.txt  README.md  SetAndClearBIt.c  build.bat  helloworld.c
include/: RingBuffer.h
src/: RingBuffer.c  main.c
